--- a/package.json
+++ b/package.json
@@ -4,8 +4,8 @@
   "description": "",
   "main": "index.js",
   "scripts": {
-    "build": "npm install --legacy-peer-deps && npm run build --prefix frontend",
-    "start": "npm install -g serve && serve -s frontend/dist -l $PORT"
+    "build": "npm install --prefix backend && npm install --prefix frontend && npm run build --prefix frontend",
+    "start": "npm run start --prefix backend"
   },
   "keywords": [],
   "author": "",
@@ -13,7 +13,11 @@
   "devDependencies": {
     "autoprefixer": "^10.4.21",
     "postcss": "^8.5.3",
-    "tailwindcss": "^3.4.17",
-    "tailwind-scrollbar": "^3.0.5"
+    "tailwindcss": "^3.4.17"
+  },
+  "dependencies": {
+    "emoji-picker-react": "^4.12.2",
+    "react-icons": "^5.5.0",
+    "timeago.js": "^4.0.2"
   }
 }
