--- a/backend/render.yaml
+++ b/backend/render.yaml
@@ -2,8 +2,9 @@ services:
   - type: web
     name: chat-app-backend
     env: node
-    buildCommand: npm install
-    startCommand: npm start
+    rootDir: backend
+    buildCommand: cd backend && npm install
+    startCommand: cd backend && npm start
     envVars:
       - key: NODE_ENV
         value: production
