--- a/frontend/render.yaml
+++ b/frontend/render.yaml
@@ -2,8 +2,9 @@ services:
   - type: web
     name: chat-app-frontend
     env: node
-    buildCommand: npm install && npm run build
-    startCommand: npm start
+    rootDir: frontend
+    buildCommand: cd frontend && npm install && npm run build
+    startCommand: cd frontend && npm start
     envVars:
       - key: VITE_API_URL
         sync: false
