--- a/backend/render.yaml
+++ b/backend/render.yaml
@@ -2,8 +2,8 @@ services:
   - type: web
     name: chat-app-backend
     env: node
-    buildCommand: npm install
-    startCommand: node --experimental-modules src/index.js
+    buildCommand: cd backend && npm install
+    startCommand: cd backend && node src/index.js
     envVars:
       - key: NODE_ENV
         value: production
