--- a/frontend/package.json
+++ b/frontend/package.json
@@ -5,9 +5,9 @@
   "type": "module",
   "scripts": {
     "dev": "vite",
-    "build": "rm -rf dist && vite build",
-    "lint": "eslint .",
-    "preview": "vite preview"
+    "build": "vite build",
+    "preview": "vite preview --port 3000",
+    "lint": "eslint ."
   },
   "dependencies": {
     "axios": "^1.7.7",
