--- a/frontend/render.yaml
+++ b/frontend/render.yaml
@@ -2,10 +2,13 @@ services:
   - type: web
     name: chat-app-frontend
     env: node
-    buildCommand: npm install && npm run build
-    startCommand: npm start
+    buildCommand: cd frontend && npm install && npm run build
+    startCommand: cd frontend && npm run preview
     envVars:
       - key: VITE_API_URL
         sync: false
+      - key: VITE_WS_URL
+        sync: false
       - key: NODE_ENV
-        value: production 
+        value: production
+    staticPublishPath: ./frontend/dist 
